// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ElasticLoader should be called with correct id when using custom selector 1`] = `
{
  "body": {
    "myId": 1,
    "text": "test",
  },
  "id": 1,
  "index": "testIndex",
}
`;

exports[`ElasticLoader should use correct body 1`] = `
{
  "body": {
    "id": 1,
    "text": "test",
  },
  "id": 1,
  "index": "testIndex",
}
`;

exports[`ElasticLoader should use correct id 1`] = `
{
  "body": {
    "id": 1,
    "text": "test",
  },
  "id": 1,
  "index": "testIndex",
}
`;

exports[`ElasticLoader should use correct index 1`] = `
{
  "body": {
    "id": 1,
    "text": "test",
  },
  "id": 1,
  "index": "testIndex",
}
`;

exports[`ElasticLoader should use correct type 1`] = `
{
  "body": {
    "id": 1,
    "text": "test",
  },
  "id": 1,
  "index": "testIndex",
}
`;
